src/snapshots/revu__render__tests__renders_collapsed_fold_to_buffer.snap
---
source: src/render.rs
expression: terminal.backend()
---
"── file.txt                                       "
"@@ -1,20 +1,20 @@                                 "
"  ▼ 6 unchanged lines                             "
"   7   7  line 7                                  "
"   8   8  line 8                                  "
"   9   9  line 9                                  "
"  10     -line 10 old                             "
"      10 +line 10 new                             "
"  11  11  line 11                                 "
"  12  12  line 12                                 "
"  13  13  line 13                                 "
"  ▼ 7 unchanged lines                             "
"                                                  "
"                                                  "
