src/snapshots/revu__render__tests__renders_diff_to_buffer.snap
---
source: src/render.rs
expression: terminal.backend()
---
"── src/main.rs                                    "
"@@ -1,2 +1,3 @@                                   "
"   1   1  fn main() {                             "
"   2     -    println!("old");                    "
"       2 +    println!("new");                    "
"       3 +    // added line                       "
"   3   4  }                                       "
"                                                  "
"                                                  "
"                                                  "
"                                                  "
"                                                  "
