src/snapshots/revu__render__tests__renders_expanded_fold_to_buffer.snap
---
source: src/render.rs
expression: terminal.backend()
---
"── file.txt                                       "
"@@ -1,20 +1,20 @@                                 "
"  ▲ 6 unchanged lines                             "
"   1   1  line 1                                  "
"   2   2  line 2                                  "
"   3   3  line 3                                  "
"   4   4  line 4                                  "
"   5   5  line 5                                  "
"   6   6  line 6                                  "
"   7   7  line 7                                  "
"   8   8  line 8                                  "
"   9   9  line 9                                  "
"  10     -line 10 old                             "
"      10 +line 10 new                             "
"  11  11  line 11                                 "
"  12  12  line 12                                 "
"  13  13  line 13                                 "
"  ▼ 7 unchanged lines                             "
